--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restoran</title>
-    <link rel="stylesheet" href="../praktikrpl1-main/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="navbar-logo">
-            <a href="#"><img src="../praktikrpl1-main/img/logo.png" width="15%" height="8%"></a>
+            <a href="#"><img src="img/logo.png" width="15%" height="8%"></a>
         </div>
         <ul class="navbar-menu">
             <li><a href="#home">Home</a></li>
@@ -35,7 +35,7 @@
         <h3>Restaurant with a variety of menu choices</h3>
         <div class="about-content">
             <div class="about-img">
-                <img src="../praktikrpl1-main/img/restoran.jpg" width="80%" height="70%">
+                <img src="img/restoran.jpg" width="80%" height="70%">
             </div>
             <div class="about-deskripsi">
                 <h2>Mengapa Memilih Makanan Yang Ada Di Restaurant Ini?</h2>
@@ -53,7 +53,7 @@
 
     <div class="card-container">
         <div class="card">
-            <img src="../praktikrpl1-main/img/ayam bakar.png" width="20%" height="20%">
+            <img src="img/ayam bakar.png" width="20%" height="20%">
             <div class="card-section">
                 <h3>Ayam Bakar Tradisional</h3>
                 <p>Terbuat dari ayam yang di marinasi dengan berbagai
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="../praktikrpl1-main/img/Asian Noodle Recipes.jpg" width="20%" height="20%">
+            <img src="img/Asian Noodle Recipes.jpg" width="20%" height="20%">
             <div class="card-section">
                 <h3>Soto Ayam</h3>
                 <p>soto dengan ciri khas kuah kuning yang kaya rempah,
@@ -75,7 +75,7 @@
             </div>
         </div>
                 <div class="card">
-            <img src="../praktikrpl1-main/img/sate.jpg" width="20%" height="20%">
+            <img src="img/sate.jpg" width="20%" height="20%">
             <div class="card-section">
                 <h3>Sate Ayam</h3>
                 <p>Disajikan dengan bumbu kacang yang gurih dan manis,
@@ -85,14 +85,14 @@
             </div>
         </div>
         <div class="card">
-            <img src="../praktikrpl1-main/img/Nasi pecel.jpg" width="20%" height="20%">
+            <img src="img/Nasi pecel.jpg" width="20%" height="20%">
             <div class="card-section">
                 <h3>Pecel Spesial</h3>
                 <p>Berisi sayuran rebus yang dibumbui dengan smabal kacang pedas manis dan dengan  berbagai toping diatasnaya</p>
             </div>
         </div>
         <div class="card">
-            <img src="../praktikrpl1-main/img/gurame pedas manis.png" width="20%" height="20%">
+            <img src="img/gurame pedas manis.png" width="20%" height="20%">
             <div class="card-section">
                 <h3>Gurame Asam manis</h3>
                 <p>Ikan gurame goreng yang disiram dengan saus manis
